--- a/.github/workflows/server_ci.yaml
+++ b/.github/workflows/server_ci.yaml
@@ -25,4 +25,4 @@ jobs:
     - name: Lint with pylint
       run: |
         pip install pylint
-        pylint --rcfile=.pylintrc app/
+        pylint --rcfile=.pylintrc server/app/
