--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,8 @@ services:
       context: ./client
     environment:
       NODE_ENV: development
+      API_URL: http://fastapi-app:8000
+      NEXT_PUBLIC_API_URL: http://localhost:3000
     ports:
       - "3000:3000"
     volumes:
